--- a/package.json
+++ b/package.json
@@ -33,11 +33,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.19",
     "three": "^0.182.0",
     "typescript": "^5.9.3"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
-    "tailwindcss": "^3.4.19"
   }
 }
