--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "Adam Beloucif",
   "license": "MIT",
   "dependencies": {
+    "@react-three/drei": "^9.88.17",
+    "@react-three/fiber": "^8.15.19",
     "@types/node": "^25.2.0",
     "@types/react": "^18.3.18",
     "animejs": "^4.3.5",
@@ -31,6 +33,10 @@
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
+    "three": "^0.182.0",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@types/three": "^0.182.0"
   }
 }
