fix: resolve ReactCurrentBatchConfig crash (React/R3F version conflict)
- Add react-reconciler override to 0.29.2 in package.json
- Add transpilePackages for Three.js ecosystem in next.config.js
- Add client-side webpack alias to force single React instance
- Prevents duplicate React copies causing undefined internals
- Bundle size reduced: 102kB -> 87.5kB shared JS

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "three": "^0.182.0",
     "typescript": "^5.9.3"
   },
+  "overrides": {
+    "react-reconciler": "0.29.2"
+  },
   "devDependencies": {
     "@types/three": "^0.182.0"
   }
