--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "author": "Adam Beloucif",
   "license": "MIT",
   "dependencies": {
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^9.0.0",
     "@types/node": "^25.2.0",
-    "@types/react": "^18.3.18",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "animejs": "^4.3.5",
     "autoprefixer": "^10.4.24",
     "clsx": "^2.1.1",
@@ -29,15 +30,12 @@
     "lucide-react": "^0.563.0",
     "next": "^15.5.12",
     "postcss": "^8.5.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
     "three": "^0.182.0",
     "typescript": "^5.9.3"
-  },
-  "overrides": {
-    "react-reconciler": "0.29.2"
   },
   "devDependencies": {
     "@types/three": "^0.182.0"
