feat: SEO improvements, remove em dashes, add page metadata
- Enhanced SEO: canonical URL, metadataBase, richer keywords, publisher
- Enriched JSON-LD schema: image, address, worksFor, alumniOf, inLanguage
- Added metadata layouts for /projets and /contact pages
- Replaced all em dashes with regular dashes across 15 files
- Updated manifest.json theme to #141414
- Fixed certifications count (9), years experience (4+)
- Rewrote frise, projets, competences, contact pages (Netflix dark style)
- All pages: no anime.js, all content visible immediately

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "Adam Beloucif - Portfolio",
-  "short_name": "Adam Portfolio",
-  "description": "Data Engineer & Fullstack Developer - Portfolio",
+  "short_name": "Adam B.",
+  "description": "Data Engineer & Fullstack Developer - Portfolio de Adam Beloucif",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0c0c0c",
-  "theme_color": "#FFB000",
+  "background_color": "#141414",
+  "theme_color": "#141414",
   "orientation": "portrait-primary",
   "icons": [
     {
